--- a/css/login.css
+++ b/css/login.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Crete+Round:ital@0;1&family=Titan+One&display=swap');
+@import "global.css";
 
 * {
     margin: 0;
@@ -22,7 +23,7 @@ body {
     margin: 0 auto;
     padding: 20px;
 }
-.header{
+.header-web{
   position: fixed;
   top: 0;
   left: 0;
@@ -33,7 +34,7 @@ body {
   align-items: center;
   z-index: 100;
 }
-.header::before{
+.header-web::before{
   content: '';
   position: absolute;
   top: 0;
@@ -41,10 +42,10 @@ body {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, .12);
-  backdrop-filter: blur(50px);
+  
   z-index: -1;
 }
-.header::after{
+.header-web::after{
   content: '';
   position: absolute;
   top: 0;
@@ -54,7 +55,7 @@ body {
   background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
   transition: .5s ease;
 }
-.header:hover::after{
+.header-web:hover::after{
   left: 100%;
 }
 .logo{
@@ -63,7 +64,7 @@ body {
   text-decoration: none;
   font-weight: 800;
 }
-.navbar a{
+.navbar-web a{
   font-size: 1.80rem;
   color: white;
   text-decoration: none;
@@ -111,8 +112,8 @@ footer {
     border-top: 1px solid rgba(255, 255, 255, 0.2);
     color: #fff;
     font-size: 0.9rem;
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
+    
+    -webkit-
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     padding: 20px;
@@ -130,7 +131,7 @@ footer {
 
 
 @media (max-width: 1024px) {
-  .header{
+  .header-web{
     padding: 1.3rem 5%;
   }
 }
@@ -148,22 +149,22 @@ footer {
   #check:checked~ .icon #close-icon{
     display: block;
   }
-  .navbar{
+  .navbar-web{
     position: absolute;
     top: 100%;
     left: 0;
     width: 100%;
     height: 0;
     background: rgba(0, 0, 0, .12);
-    backdrop-filter: blur(50px);
+    
     box-sizing: 0 .5rem 1rem rgba(0, 0, 0, .1);
     overflow: hidden;
     transition: .3s ease;
   }
-  #check:checked~ .navbar{
+  #check:checked~ .navbar-web{
     height: 17.7rem;
   }
-  .navbar a{
+  .navbar-web a{
     display: block;
     font-size: 1.60rem;
     margin: 1.3rem 0;
@@ -172,7 +173,7 @@ footer {
     transform: translateY(-50px);
     transition: .5s ease;
   }
-  #check:checked~ .navbar a{
+  #check:checked~ .navbar-web a{
     transform: translateY(0);
     transition-delay: calc(.15s * var(--i));
     opacity: 1;
