--- a/css/game.css
+++ b/css/game.css
@@ -257,7 +257,7 @@ footer {
     width: 100%;
     height: 0;
     background: rgba(0, 0, 0, .12);
-
+    backdrop-filter: blur(5px);
     box-sizing: 0 .5rem 1rem rgba(0, 0, 0, .1);
     overflow: hidden;
     transition: .3s ease;
