--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, .12);
-  
+
   z-index: -1;
 }
 .header::after{
@@ -111,7 +111,7 @@ footer {
     border-top: 1px solid rgba(255, 255, 255, 0.2);
     color: #fff;
     font-size: 0.9rem;
-    
+
     -webkit-
     background-color: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
@@ -155,7 +155,7 @@ footer {
     width: 100%;
     height: 0;
     background: rgba(0, 0, 0, .12);
-    
+    backdrop-filter: blur(5px);
     box-sizing: 0 .5rem 1rem rgba(0, 0, 0, .1);
     overflow: hidden;
     transition: .3s ease;
